# edsnlp

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: tests.yml
docs/assets/templates/python/material/: class.html
docs/pipelines/core/: contextual-matcher.md  endlines.md  matcher.md  sentences.md  terminology.md
docs/pipelines/misc/: consultation-dates.md  dates.md  measurements.md  reason.md  sections.md
docs/pipelines/ner/: score.md
docs/pipelines/qualifiers/: family.md  history.md  hypothesis.md  negation.md  reported-speech.md
docs/pipelines/trainable/: ner.md
edsnlp/: __init__.py  language.py  patch_spacy.py
edsnlp/core/: component.py  pipeline.py  registry.py
edsnlp/pipelines/: factories.py
edsnlp/pipelines/core/context/: context.py  factory.py
edsnlp/pipelines/core/contextual_matcher/: contextual_matcher.py  factory.py
edsnlp/pipelines/core/endlines/: endlines.py  endlinesmodel.py  factory.py
edsnlp/pipelines/core/matcher/: factory.py  matcher.py
edsnlp/pipelines/core/normalizer/: factory.py  normalizer.py
edsnlp/pipelines/core/normalizer/accents/: factory.py
edsnlp/pipelines/core/normalizer/lowercase/: __init__.py  factory.py
edsnlp/pipelines/core/normalizer/pollution/: factory.py  pollution.py
edsnlp/pipelines/core/normalizer/quotes/: factory.py
edsnlp/pipelines/core/normalizer/remove_lowercase/: __init__.py  factory.py  remove_lowercase.py
edsnlp/pipelines/core/normalizer/spaces/: factory.py
edsnlp/pipelines/core/sentences/: factory.py  fast_sentences.pxd  fast_sentences.pyx  sentences.py  sentences.pyx
edsnlp/pipelines/core/terminology/: factory.py  terminology.py
edsnlp/pipelines/misc/consultation_dates/: consultation_dates.py  factory.py
edsnlp/pipelines/misc/dates/: dates.py  factory.py
edsnlp/pipelines/misc/measurements/: factory.py  measurements.py
edsnlp/pipelines/misc/reason/: factory.py  patterns.py  reason.py
edsnlp/pipelines/misc/sections/: factory.py  sections.py
edsnlp/pipelines/misc/tables/: factory.py  tables.py
edsnlp/pipelines/ner/adicap/: adicap.py  factory.py
edsnlp/pipelines/ner/behaviors/alcohol/: factory.py
edsnlp/pipelines/ner/behaviors/tobacco/: factory.py
edsnlp/pipelines/ner/cim10/: factory.py
edsnlp/pipelines/ner/covid/: factory.py
edsnlp/pipelines/ner/disorders/: base.py
edsnlp/pipelines/ner/disorders/AIDS/: factory.py
edsnlp/pipelines/ner/disorders/CKD/: factory.py
edsnlp/pipelines/ner/disorders/COPD/: factory.py
edsnlp/pipelines/ner/disorders/cerebrovascular_accident/: factory.py
edsnlp/pipelines/ner/disorders/congestive_heart_failure/: factory.py
edsnlp/pipelines/ner/disorders/connective_tissue_disease/: factory.py
edsnlp/pipelines/ner/disorders/dementia/: factory.py
edsnlp/pipelines/ner/disorders/diabetes/: factory.py
edsnlp/pipelines/ner/disorders/hemiplegia/: factory.py
edsnlp/pipelines/ner/disorders/leukemia/: factory.py
edsnlp/pipelines/ner/disorders/liver_disease/: factory.py
edsnlp/pipelines/ner/disorders/lymphoma/: factory.py
edsnlp/pipelines/ner/disorders/myocardial_infarction/: factory.py
edsnlp/pipelines/ner/disorders/peptic_ulcer_disease/: factory.py
edsnlp/pipelines/ner/disorders/peripheral_vascular_disease/: factory.py
edsnlp/pipelines/ner/disorders/solid_tumor/: factory.py
edsnlp/pipelines/ner/drugs/: factory.py
edsnlp/pipelines/ner/scores/: base_score.py  factory.py
edsnlp/pipelines/ner/scores/charlson/: factory.py
edsnlp/pipelines/ner/scores/elstonellis/: factory.py
edsnlp/pipelines/ner/scores/emergency/ccmu/: factory.py
edsnlp/pipelines/ner/scores/emergency/gemsa/: factory.py
edsnlp/pipelines/ner/scores/emergency/priority/: factory.py
edsnlp/pipelines/ner/scores/sofa/: factory.py  sofa.py
edsnlp/pipelines/ner/scores/tnm/: factory.py  tnm.py
edsnlp/pipelines/ner/umls/: factory.py
edsnlp/pipelines/qualifiers/: base.py
edsnlp/pipelines/qualifiers/family/: factory.py  family.py
edsnlp/pipelines/qualifiers/history/: factory.py  history.py
edsnlp/pipelines/qualifiers/hypothesis/: factory.py  hypothesis.py
edsnlp/pipelines/qualifiers/negation/: factory.py  negation.py
edsnlp/pipelines/qualifiers/reported_speech/: factory.py  reported_speech.py
edsnlp/pipelines/trainable/embeddings/: text_cnn.py  transformer.py  typing.py
edsnlp/pipelines/trainable/ner/: ner.py
edsnlp/pipelines/trainable/nested_ner/: factory.py
edsnlp/processing/: distributed.py  simple.py  wrapper.py
edsnlp/utils/: collections.py  span_getters.py  training.py
edsnlp/viz/: quick_examples.py
notebooks/: premier-pipeline.md
tests/: test_docs.py
tests/pipelines/core/: test_contextual_matcher.py  test_endlines.py  test_normalisation.py
tests/pipelines/misc/: test_dates.py  test_measurements.py
tests/pipelines/ner/: test_score.py
tests/processing/: test_processing.py
